# ai-sandbox-vibecoded

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Design.md  README.md  benchmark_-house-mini-report.md  docker-compose.yml  opencode.jsonc  package-lock.json  pyproject.toml  wanted_changes_prompt.txt
.github/workflows/: ci.yml
.opencode/skills/benchmark-engine/: SKILL.md
.opencode/skills/mlops-backend/: SKILL.md
backend/app/: main.py
backend/app/core/: __init__.py  config.py  database.py  logging.py
backend/app/data_layer/: __init__.py  embeddings.py  ingestion.py  storage.py  validation.py  versioning.py
backend/app/evaluation_layer/: __init__.py
backend/app/experiment_layer/: __init__.py
backend/app/governance/: __init__.py  audit.py  auth.py  models.py  secrets.py
backend/app/models/: __init__.py  agent_api_contract.py  base.py  dataset.py  experiment.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend-simple/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend-simple/src/: App.tsx  styles.css  types.ts
frontend-simple/src/api/: simpleClient.ts
frontend-simple/src/pages/: SimpleConfigPage.tsx  SimpleDatasetPage.tsx  SimpleHomePage.tsx  SimpleResultsPage.tsx  SimpleRunPage.tsx  index.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: ActionBar.tsx  Footer.tsx  Navbar.tsx  ProgressRail.tsx  SpinnerPanel.tsx
scripts/: agent_api_simulator.py
technical_documents_promised_features/: Technical document - AI Sandbox.md
tests/: conftest.py
tests/integration/: test_compose_stack_contract.py  test_db_connection.py  test_minio_connection.py
tests/unit/: test_config.py  test_experiment_models.py  test_health.py  test_models.py  test_repository_contract.py
(+78 files in other folders)
