[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-sandbox"
version = "0.1.0"
description = "Modular experimentation platform for testing, comparing, and benchmarking AI models before production integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "langgraph>=0.2.50",
    "mlflow>=2.18.0",
    "langfuse>=2.50.0",
    "minio>=7.2.10",
    "chromadb>=0.5.17",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.2",
    "lightgbm>=4.5.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
]
evaluation = [
    # Phase 4 evaluation dependencies (requires compatible Python)
    "ragas>=0.2.6",
    "deepeval>=2.0.0",
    "shap>=0.51.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
